# TJE2D

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md
data/: bitmap-font-black.tga  bitmap-font-white.tga  mini-font-black-4x6.tga  mini-font-white-4x6.tga  spritesheet.tga
src/: framework.cpp  framework.h  game.cpp  image.cpp  image.h  input.cpp  main.cpp  synth.cpp  synth.h
visual/: visual.sln
visual/visual/: visual.vcxproj
